// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coblocks/logos should render with className attribute 1`] = `"<!-- wp:coblocks/logos {\\"className\\":\\"my-custom-class\\"} /-->"`;

exports[`coblocks/logos should render with grayscale attribute 1`] = `
"<!-- wp:coblocks/logos {\\"grayscale\\":true} -->
<div class=\\"wp-block-coblocks-logos has-filter-grayscale\\"><div class=\\"wp-block-coblocks-logos__row\\"><div style=\\"width:100%\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-1.jpg\\" data-id=\\"1\\" data-width=\\"100%\\"/></div></div></div>
<!-- /wp:coblocks/logos -->"
`;

exports[`coblocks/logos should render with images attribute 1`] = `
"<!-- wp:coblocks/logos -->
<div class=\\"wp-block-coblocks-logos\\"><div class=\\"wp-block-coblocks-logos__row\\"><div style=\\"width:100%\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-1.jpg\\" data-id=\\"1\\" data-width=\\"100%\\"/></div></div></div>
<!-- /wp:coblocks/logos -->"
`;

exports[`coblocks/logos should render with images.width attribute 1`] = `
"<!-- wp:coblocks/logos -->
<div class=\\"wp-block-coblocks-logos\\"><div class=\\"wp-block-coblocks-logos__row\\"><div style=\\"width:60.6897%\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-1.jpg\\" data-id=\\"1\\" data-width=\\"60.6897%\\"/></div></div></div>
<!-- /wp:coblocks/logos -->"
`;
